# AmazingCar

./: CMakeLists.txt  config  package.xml
examples/: joy_subscriber.cpp  serial_example.cc  serial_subscriber.cpp
include/: magicPath.h  magicPoint.h  magicVector.h  pidClass.h  wheelSpeed.h
launch/: navigation.launch
msg/: my_angle_msg.msg  my_car_state.msg  my_checkpoints.msg  my_gps_state.msg  my_lidar_distance.msg  my_node_state.msg  my_server_cmd.msg
shell/: algorithm.sh  controller.sh  gnss.sh  ui.sh  vlp.sh
src/: .my_server.cpp.swp  .pid.cpp.swo  .pid.cpp.swp  ahh.cpp  algorithm.cpp  beixing_lidar.cpp  expired_ui_transdata.cpp  gprs_location_publisher.cpp  gprs_location_publisher.cpp.latest  gyroscope.cpp  my_big_car_controller.cpp  my_car_angle_publisher.cpp  my_car_controller.cpp  my_car_front_location_publisher.cpp  my_car_location_publisher.cpp  my_car_rear_location_publisher.cpp  my_server.cpp  my_tar_location_publisher.cpp  my_wheeled_car_controller.cpp  pid.cpp  ui_transdata.cpp  vlp16_lidar.cpp
src/impl/: unix.cc
